# weather_app

./: Dockerfile  Makefile  README.md  poetry.toml  pyproject.toml
src/: weather_app.py
src/templates/: index.html
